deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: training-deployment
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      name: training-pod
  template:
    metadata:
      name: training-pod
      labels:
        name: training-pod
    spec:
      containers:
        - name: nginx
          image: nginx:1.7.9
          ports:
          - containerPort: 80
        - name: php-fpm
          image: bitnami/php-fpm
          ports:
          - containerPort: 9000
        - name: mysql
          image: mysql
          ports:
          - containerPort: 3306
        - name: php-cli
          image: php:7-cli
          ports:
          - containerPort: 80
